[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/GamePopup.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/DrawerLock.gd" type="Script" id=2]
[ext_resource path="res://styles/drawer_lock_button_hover.tres" type="StyleBox" id=3]
[ext_resource path="res://styles/drawer_lock_button_pressed.tres" type="StyleBox" id=4]
[ext_resource path="res://styles/drawer_lock_button_normal.tres" type="StyleBox" id=5]
[ext_resource path="res://images/Draw_Locker.png" type="Texture" id=6]
[ext_resource path="res://shaders/crt_material_drawer_lock.tres" type="Material" id=7]
[ext_resource path="res://images/DrawerLock.png" type="Texture" id=8]
[ext_resource path="res://sounds/unlock_padlock.wav" type="AudioStream" id=9]
[ext_resource path="res://sounds/click.wav" type="AudioStream" id=10]



[node name="DrawerLock" index="0" instance=ExtResource( 1 )]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="CenterContainer" type="CenterContainer" parent="." index="0"]

editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -275.0
margin_top = -49.0
margin_right = 277.0
margin_bottom = 49.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
use_top_left = false
_sections_unfolded = [ "Rect" ]

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer" index="0"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 552.0
margin_bottom = 98.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 0
alignment = 0
_sections_unfolded = [ "Rect", "custom_constants" ]

[node name="1" type="Button" parent="CenterContainer/HBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 69.0
margin_bottom = 98.0
rect_min_size = Vector2( 69, 98 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 5 )
toggle_mode = true
action_mode = 0
enabled_focus_mode = 0
shortcut = null
group = null
flat = false
clip_text = true
align = 1
_sections_unfolded = [ "Focus", "Margin", "Rect", "custom_colors", "custom_styles" ]

[node name="2" type="Button" parent="CenterContainer/HBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 69.0
margin_right = 138.0
margin_bottom = 98.0
rect_min_size = Vector2( 69, 98 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 5 )
toggle_mode = true
action_mode = 0
enabled_focus_mode = 0
shortcut = null
group = null
flat = false
clip_text = true
align = 1
_sections_unfolded = [ "custom_colors", "custom_styles" ]

[node name="3" type="Button" parent="CenterContainer/HBoxContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 138.0
margin_right = 207.0
margin_bottom = 98.0
rect_min_size = Vector2( 69, 98 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 5 )
toggle_mode = true
action_mode = 0
enabled_focus_mode = 0
shortcut = null
group = null
flat = false
clip_text = true
align = 1
_sections_unfolded = [ "custom_colors", "custom_styles" ]

[node name="4" type="Button" parent="CenterContainer/HBoxContainer" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 207.0
margin_right = 276.0
margin_bottom = 98.0
rect_min_size = Vector2( 69, 98 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 5 )
toggle_mode = true
action_mode = 0
enabled_focus_mode = 0
shortcut = null
group = null
flat = false
clip_text = true
align = 1
_sections_unfolded = [ "custom_colors", "custom_styles" ]

[node name="5" type="Button" parent="CenterContainer/HBoxContainer" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 276.0
margin_right = 345.0
margin_bottom = 98.0
rect_min_size = Vector2( 69, 98 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 5 )
toggle_mode = true
action_mode = 0
enabled_focus_mode = 0
shortcut = null
group = null
flat = false
clip_text = true
align = 1
_sections_unfolded = [ "custom_colors", "custom_styles" ]

[node name="6" type="Button" parent="CenterContainer/HBoxContainer" index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 345.0
margin_right = 414.0
margin_bottom = 98.0
rect_min_size = Vector2( 69, 98 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 5 )
toggle_mode = true
action_mode = 0
enabled_focus_mode = 0
shortcut = null
group = null
flat = false
clip_text = true
align = 1
_sections_unfolded = [ "custom_colors", "custom_styles" ]

[node name="7" type="Button" parent="CenterContainer/HBoxContainer" index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 414.0
margin_right = 483.0
margin_bottom = 98.0
rect_min_size = Vector2( 69, 98 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 5 )
toggle_mode = true
action_mode = 0
enabled_focus_mode = 0
shortcut = null
group = null
flat = false
clip_text = true
align = 1
_sections_unfolded = [ "custom_colors", "custom_styles" ]

[node name="8" type="Button" parent="CenterContainer/HBoxContainer" index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 483.0
margin_right = 552.0
margin_bottom = 98.0
rect_min_size = Vector2( 69, 98 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 5 )
toggle_mode = true
action_mode = 0
enabled_focus_mode = 0
shortcut = null
group = null
flat = false
clip_text = true
align = 1
_sections_unfolded = [ "custom_colors", "custom_styles" ]

[node name="Overlay" type="TextureRect" parent="." index="1"]

self_modulate = Color( 0.75, 0.75, 0.75, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -513.0
margin_top = -131.0
margin_right = 511.0
margin_bottom = 381.0
rect_scale = Vector2( 0.542, 0.67 )
rect_pivot_offset = Vector2( 515, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 6 )
stretch_mode = 0
_sections_unfolded = [ "Material", "Mouse", "Rect", "Visibility" ]

[node name="CRT" type="ColorRect" parent="." index="2"]

material = ExtResource( 7 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -283.5
margin_top = -53.0
margin_right = 283.5
margin_bottom = 53.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 1, 1, 1, 1 )
_sections_unfolded = [ "Material", "Mouse" ]

[node name="Frame" type="TextureRect" parent="." index="3"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -256.0
margin_right = 512.0
margin_bottom = 256.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 8 )
stretch_mode = 0
_sections_unfolded = [ "Mouse", "Rect" ]

[node name="Unlock" type="AudioStreamPlayer" parent="." index="5"]

stream = ExtResource( 9 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Effects"

[node name="Click" type="AudioStreamPlayer" parent="." index="6"]

stream = ExtResource( 10 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Effects"

[connection signal="toggled" from="CenterContainer/HBoxContainer/1" to="." method="_on_1_toggled"]

[connection signal="toggled" from="CenterContainer/HBoxContainer/2" to="." method="_on_2_toggled"]

[connection signal="toggled" from="CenterContainer/HBoxContainer/3" to="." method="_on_3_toggled"]

[connection signal="toggled" from="CenterContainer/HBoxContainer/4" to="." method="_on_4_toggled"]

[connection signal="toggled" from="CenterContainer/HBoxContainer/5" to="." method="_on_5_toggled"]

[connection signal="toggled" from="CenterContainer/HBoxContainer/6" to="." method="_on_6_toggled"]

[connection signal="toggled" from="CenterContainer/HBoxContainer/7" to="." method="_on_7_toggled"]

[connection signal="toggled" from="CenterContainer/HBoxContainer/8" to="." method="_on_8_toggled"]

[connection signal="finished" from="Unlock" to="." method="_on_Unlock_finished"]


